<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ablAppBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:elevation="@dimen/elevation_header"
    android:visibility="gone"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:elevation="@dimen/elevation_header">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:contentInsetStart="@dimen/padding_layout"
        android:contentInsetLeft="@dimen/padding_layout"
        app:contentInsetLeft="@dimen/padding_layout"
        app:contentInsetStart="@dimen/padding_layout"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        tools:ignore="UnusedAttribute">

        <com.dz.libraries.views.textviews.ExtTextView
            android:id="@+id/tvToolbarTitle"
            style="@style/StyleXXLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/color_black"
            android:visibility="gone"
            app:textViewFontAssetName="@string/font_normal_display" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/search" />
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>