<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.dz.libraries.views.textviews.ExtTextView
            android:id="@+id/tvCancel"
            style="@style/StyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_null_gray_selector"
            android:padding="@dimen/padding_layout"
            android:text="@string/cancel" />

        <com.dz.libraries.views.textviews.ExtTextView
            style="@style/StyleXLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.dz.libraries.views.textviews.ExtTextView
            android:id="@+id/tvSave"
            style="@style/StyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_null_gray_selector"
            android:padding="@dimen/padding_layout"
            android:text="@string/done"
            android:textColor="@color/color_white" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_layout"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.dz.libraries.views.textviews.ExtTextView
                style="@style/StyleNormal"
                android:gravity="center"
                android:text="@string/month"
                android:visibility="gone" />

            <com.dz.libraries.views.numberpickers.ExtNumberPicker
                android:id="@+id/numPickerMonth"
                style="@style/StyleNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_layout"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.dz.libraries.views.textviews.ExtTextView
                style="@style/StyleNormal"
                android:gravity="center"
                android:text="@string/day"
                android:visibility="gone" />

            <com.dz.libraries.views.numberpickers.ExtNumberPicker
                android:id="@+id/numPickerDay"
                style="@style/StyleNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_layout"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.dz.libraries.views.textviews.ExtTextView
                style="@style/StyleNormal"
                android:gravity="center"
                android:text="@string/year"
                android:visibility="gone" />

            <com.dz.libraries.views.numberpickers.ExtNumberPicker
                android:id="@+id/numPickerYear"
                style="@style/StyleNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>