<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.dz.libraries.views.textviews.ExtTextView
            android:id="@+id/tvCancel"
            style="@style/StyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_null_gray_selector"
            android:gravity="center"
            android:padding="@dimen/padding_layout"
            android:text="@string/cancel" />

        <com.dz.libraries.views.textviews.ExtTextView
            android:id="@+id/tvTitle"
            style="@style/StyleXLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_layout"
            android:text="@string/select_value"
            android:textColor="@color/color_white" />

        <com.dz.libraries.views.textviews.ExtTextView
            style="@style/StyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_null_gray_selector"
            android:gravity="center"
            android:padding="@dimen/padding_layout"
            android:text="@string/cancel"
            android:visibility="invisible" />
    </TableRow>

    <com.dz.libraries.views.edittexts.ExtEditText
        android:id="@+id/edtSearch"
        style="@style/StyleNormal"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/padding_layout"
        android:background="@drawable/bg_white_border_gray_radius"
        android:drawablePadding="@dimen/padding_content"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvKeyValuePair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>